fix typos, clarify text, update diagrams

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -16,22 +16,7 @@
    "metadata": {},
    "source": [
     "`liana` provides different statistical methods to infer `ligand-receptor` interactions from single-cell transcriptomics data omics data using prior knowledge.\n",
-    "In this notebook we showcase how to use liana in its' most basic form with toy data."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "a7827aad-4901-4116-88c5-5382b227e811",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "**Note**\n",
-    "    \n",
-    "In Jupyter notebooks and lab, you can see the documentation for a python function by hitting `SHIFT + TAB`, hit it twice to expand the view, or by typing `?name_of_function`.\n",
-    "\n",
-    "</div>  "
+    "In this notebook we showcase how to use liana in its most basic form with toy data."
    ]
   },
   {
@@ -68,7 +53,7 @@
    "source": [
     "## Loading toy data\n",
     "\n",
-    "`liana` uses `anndata` objects with processed single-cell (*and soon spatial*) transcriptomics data, with pre-defined cell labels (identities), to predict ligand-receptor interactions among all pairs of cell identities.\n",
+    "In the most general case, `liana`'s ligand-receptor methods use `anndata` objects with processed single-cell transcriptomics data, with pre-defined cell labels (identities), to infer ligand-receptor interactions among all pairs of cell identities.\n",
     "\n",
     "To load the example data-set, simply run:"
    ]
@@ -135,7 +120,7 @@
    "id": "a5bbdb2f-07c4-41e1-9354-8897d92c7775",
    "metadata": {},
    "source": [
-    "In the most basic scenario, `liana` works with the log-trasformed counts matrix, in this object the normalized counts are stored in `raw`:"
+    "`liana` typically works with the log1p-trasformed counts matrix, in this object the normalized counts are stored in `raw`:"
    ]
   },
   {
@@ -809,7 +794,7 @@
    "id": "53b871a0-2ac7-4db0-854e-d7fdd0f33ed9",
    "metadata": {},
    "source": [
-    "Here, we see that stats are provided for both ligand and receptor entities, more specifically: - `ligand` and `receptor` are typically the two entities that interact. As a reminder, CCC events are not limited to secreted signalling, but we refer to them as `ligand` and `receptor` for simplicity. \n",
+    "Here, we see that stats are provided for both ligand and receptor entities, more specifically: `ligand` and `receptor` are the two entities that potentially interact. As a reminder, CCC events are not limited to secreted signalling, but we refer to them as `ligand` and `receptor` for simplicity.\n",
     "\n",
     "Also, in the case of heteromeric complexes, the `ligand` and `receptor` columns represent the subunit with minimum expression, while `*_complex` corresponds to the actual complex, with subunits being separated by `_`.\n",
     "\n",
@@ -817,7 +802,7 @@
     "\n",
     "- `*_props`: represents the proportion of cells that express the entity. \n",
     "\n",
-    "  By default, in CellPhoneDB and LIANA, any interactions in which either entity is not expressed in above 10% of cells per cell type is considered as a false positive,\n",
+    "  By default, any interactions in which either entity is not expressed in above 10% of cells per cell type is considered as a false positive,\n",
     "  under the assumption that since CCC occurs between cell types, a sufficient proportion of cells within should express the genes.\n",
     "\n",
     "- `*_means`: entity expression mean per cell type\n",
