--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To showcase LIANA's local functions, we will use an ischemic 10X Visium spatial slide from [Kuppe et al., 2022](https://www.nature.com/articles/s41586-022-05060-x). It is a tissue sample obtained from a patient with myocardial infarction, specifically focusing on the ischemic zone of the heart tissue. \n",
+    "We will use an ischemic 10X Visium spatial slide from [Kuppe et al., 2022](https://www.nature.com/articles/s41586-022-05060-x). It is a tissue sample obtained from a patient with myocardial infarction, specifically focusing on the ischemic zone of the heart tissue. \n",
     "\n",
     "The slide provides spatially-resolved information about the cellular composition and gene expression patterns within the tissue."
    ]
@@ -604,14 +604,13 @@
     "The implementation of MISTy in LIANA relies on [MuData](https://github.com/scverse/mudata) objects [(Bredikhin et al., 2022)](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02577-8) and extends them to a very simple child class we call \"MistyData\". \n",
     "To make it easier to use, we provide functions to construct \"MistyData\" objects that transform the data into a format that MISTy can use.\n",
     "\n",
-    "Briefly, a \"MistyData\" object is just a MuData object with **intra** as one of the modalities - this is the view in which the variables explained by all other views are stored. \n",
+    "Briefly, a \"MistyData\" object is just a MuData object with **intra** as one of the modalities - this is the view in which the (**target**) variables explained by all other views are stored. \n",
     "MISTy is flexible to any other view that is appended, provided it also contains a spatial neighbors graph.\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "  Writing a MistyData object will simply result in a MuData object being written to disk.\n",
     "  To read it back as MistyData, use `mudata.read_h5ad` and pass back it to the `MistyData()` function.\n",
     "</div>\n",
-    "\n",
     "\n",
     "Let's use `genericMistyData` to construct a MuData object with the intra view and the cell type proportions as the first view.\n",
     "Then it additionally build a 'juxta' view for the spots that are neighbors of each other, and a 'para' view for all surrounding spots within a certain radius, or bandwidth.\n",
@@ -694,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have constructed the object, we can learn the different views."
+    "Now that we have constructed the object, let's learn the relationships across the views."
    ]
   },
   {
@@ -723,7 +722,7 @@
     "* `target_metrics` - the metrics that describe the target variables from the intra view, including R-squared across different views as well as the estimated contributions to the predictive performance of each view per target.\n",
     "* `interactions` - feature importances per view\n",
     "\n",
-    "if inplace is true, these are appended to the MuData object."
+    "if `inplace` is true (Default), these are appended to the MuData object."
    ]
   },
   {
@@ -1200,7 +1199,7 @@
    "source": [
     "Since this is a linear model, the coefficients would not be directly comparable (as are importances in a Random Forest). Thus, we use the coefficients' t-values, as calculated by Ordinary Least Squares, which are signed and directly comparable.\n",
     "\n",
-    "Let's explore the coefficients for each target-prediction interaction:"
+    "Let's explore the t-values for each target-prediction interaction:"
    ]
   },
   {
@@ -1277,7 +1276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, let's estimate Transcription Factor activities with decoupler:"
+    "So, let's also estimate Transcription Factor activities with decoupler:"
    ]
   },
   {
@@ -1317,7 +1316,7 @@
     "    net=net,\n",
     "    verbose=True,\n",
     "    use_raw=False,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1643,7 +1642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we provide a utility function that build an object with receptors in the intra view and ligands in the para view (or in their surrounding)."
+    "Finally, we provide a utility function that builds an object with receptors in the intra view and ligands in the para view (or in their surrounding)."
    ]
   },
   {
