add keep_stats to adata_to_views

--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -257,7 +257,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:03<00:00,  2.59it/s]\n"
+      "100%|██████████| 8/8 [00:03<00:00,  2.06it/s]\n"
      ]
     }
    ],
@@ -265,6 +265,7 @@
     "mdata = li.multi.adata_to_views(adata,\n",
     "                                groupby=groupby,\n",
     "                                sample_key=sample_key,\n",
+    "                                keep_stats=True,\n",
     "                                obs_keys=['condition', 'patient'], # add those to mdata.obs\n",
     "                                min_prop=0.05, # min nnz values (filter features)\n",
     "                                min_smpls=3, # min samples per view (filter features)\n",
@@ -371,6 +372,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also explore the statistics at the pseodobulk level, when `keep_stats=True`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CD14:psbulk_n_cells</th>\n",
+       "      <th>CD14:psbulk_counts</th>\n",
+       "      <th>CD4T:psbulk_n_cells</th>\n",
+       "      <th>CD4T:psbulk_counts</th>\n",
+       "      <th>DCs:psbulk_n_cells</th>\n",
+       "      <th>DCs:psbulk_counts</th>\n",
+       "      <th>NK:psbulk_n_cells</th>\n",
+       "      <th>NK:psbulk_counts</th>\n",
+       "      <th>CD8T:psbulk_n_cells</th>\n",
+       "      <th>CD8T:psbulk_counts</th>\n",
+       "      <th>B:psbulk_n_cells</th>\n",
+       "      <th>B:psbulk_counts</th>\n",
+       "      <th>FGR3:psbulk_n_cells</th>\n",
+       "      <th>FGR3:psbulk_counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ctrl&amp;101</th>\n",
+       "      <td>207.0</td>\n",
+       "      <td>531210.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>403847.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>95330.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>57550.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>27892.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>124446.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>197588.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ctrl&amp;1015</th>\n",
+       "      <td>859.0</td>\n",
+       "      <td>1793578.0</td>\n",
+       "      <td>951.0</td>\n",
+       "      <td>1113616.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>146189.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>177960.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>94175.0</td>\n",
+       "      <td>459.0</td>\n",
+       "      <td>556570.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>438020.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ctrl&amp;1016</th>\n",
+       "      <td>393.0</td>\n",
+       "      <td>742765.0</td>\n",
+       "      <td>502.0</td>\n",
+       "      <td>528665.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>88298.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>79082.0</td>\n",
+       "      <td>504.0</td>\n",
+       "      <td>457417.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>152335.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>208274.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ctrl&amp;1039</th>\n",
+       "      <td>126.0</td>\n",
+       "      <td>301741.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>249014.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>35016.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ctrl&amp;107</th>\n",
+       "      <td>210.0</td>\n",
+       "      <td>466961.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>216841.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>33243.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>52655.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           CD14:psbulk_n_cells  CD14:psbulk_counts  CD4T:psbulk_n_cells  \\\n",
+       "ctrl&101                 207.0            531210.0                353.0   \n",
+       "ctrl&1015                859.0           1793578.0                951.0   \n",
+       "ctrl&1016                393.0            742765.0                502.0   \n",
+       "ctrl&1039                126.0            301741.0                201.0   \n",
+       "ctrl&107                 210.0            466961.0                180.0   \n",
+       "\n",
+       "           CD4T:psbulk_counts  DCs:psbulk_n_cells  DCs:psbulk_counts  \\\n",
+       "ctrl&101             403847.0                25.0            95330.0   \n",
+       "ctrl&1015           1113616.0                40.0           146189.0   \n",
+       "ctrl&1016            528665.0                27.0            88298.0   \n",
+       "ctrl&1039            249014.0                 NaN                NaN   \n",
+       "ctrl&107             216841.0                 NaN                NaN   \n",
+       "\n",
+       "           NK:psbulk_n_cells  NK:psbulk_counts  CD8T:psbulk_n_cells  \\\n",
+       "ctrl&101                65.0           57550.0                 29.0   \n",
+       "ctrl&1015              179.0          177960.0                 85.0   \n",
+       "ctrl&1016               90.0           79082.0                504.0   \n",
+       "ctrl&1039                NaN               NaN                  NaN   \n",
+       "ctrl&107                37.0           33243.0                  NaN   \n",
+       "\n",
+       "           CD8T:psbulk_counts  B:psbulk_n_cells  B:psbulk_counts  \\\n",
+       "ctrl&101              27892.0             106.0         124446.0   \n",
+       "ctrl&1015             94175.0             459.0         556570.0   \n",
+       "ctrl&1016            457417.0             125.0         152335.0   \n",
+       "ctrl&1039                 NaN              26.0          35016.0   \n",
+       "ctrl&107                  NaN              44.0          52655.0   \n",
+       "\n",
+       "           FGR3:psbulk_n_cells  FGR3:psbulk_counts  \n",
+       "ctrl&101                  72.0            197588.0  \n",
+       "ctrl&1015                164.0            438020.0  \n",
+       "ctrl&1016                 81.0            208274.0  \n",
+       "ctrl&1039                  NaN                 NaN  \n",
+       "ctrl&107                   NaN                 NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdata.uns['psbulk_stats'].head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pre-process the pseudobulk profiles"
    ]
   },
@@ -385,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,11 +620,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "li.multi.filter_view_markers(mdata, markers=markers, var_column=None, inplace=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We suggest users to also consider internal `muon` functions (e.g. `mu.pp.filter_obs` & `mu.pp.filter_var`) to remove cells and variables that are not informative."
    ]
   },
   {
@@ -482,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +891,7 @@
        "4   patient_107  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -780,10 +975,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8765703988888)>"
+       "<ggplot: (8771621510589)>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +1109,7 @@
        "9614    DCs  APOBEC3A  1.504961 -0.074503  0.004163 -0.028965 -0.011071"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -946,10 +1141,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8765703908109)>"
+       "<ggplot: (8771621044303)>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1210,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1232,7 @@
        "<Figure size 640x480 with 2 Axes>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,12 +1267,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
