re-run tutorials

--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -187,6 +187,13 @@
      "text": [
       "WARNING: Default of the method has been changed to 't-test' from 't-test_overestim_var'\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "... storing 'sample' as categorical\n"
+     ]
     }
    ],
    "source": [
@@ -257,7 +264,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:03<00:00,  2.06it/s]\n"
+      "100%|██████████| 8/8 [00:04<00:00,  1.97it/s]\n"
      ]
     }
    ],
@@ -975,7 +982,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8771621510589)>"
+       "<ggplot: (8778907796514)>"
       ]
      },
      "execution_count": 18,
@@ -1141,7 +1148,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8771621044303)>"
+       "<ggplot: (8778907796556)>"
       ]
      },
      "execution_count": 20,
