pass anndata as table TBC

--- a/sma_spatialdata.ipynb
+++ b/sma_spatialdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,10 @@
     "# import squidpy as sq\n",
     "\n",
     "from scipy.spatial import cKDTree\n",
-    "# import muon as mu\n",
     "import mudata as mu\n",
     "\n",
-    "import spatialdata as sd"
+    "import spatialdata as sd\n",
+    "import anndata as an"
    ]
   },
   {
@@ -28,7 +28,8 @@
     "## load slide\n",
     "slide = \"B1\"\n",
     "exp = \"V11L12-109\" # V11T17-102 V11L12-109 V11T16-085\n",
-    "slide_path = f\"data/VicariEtAl/sma/{exp}/{exp}_{slide}/output_data\""
+    "key = f\"{exp}_{slide}\"\n",
+    "slide_path = f\"data/VicariEtAl/sma/{exp}/{key}/output_data\""
    ]
   },
   {
@@ -75,14 +76,6 @@
    "source": []
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "try spatialdata"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -98,28 +91,28 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dbdimitrov/anaconda3/envs/spatialdata/lib/python3.10/site-packages/spatialdata/models/models.py:725: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
-      "  if not is_categorical_dtype(adata.obs[region_key]):\n",
-      "/tmp/ipykernel_162779/2469090241.py:8: UserWarning: Converting `region_key: region` to categorical dtype.\n",
-      "  mdata = TableModel.parse(mdata, region=['msi', 'rna'], region_key='region', instance_key='instance_id')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# shapes \n",
     "rna_locations = ShapesModel.parse(rna_pos, geometry=0, radius=1)\n",
-    "msi_locations = ShapesModel.parse(msi_pos, geometry=0, radius=1)\n",
-    "\n",
-    "mdata.obs['region'] = (['rna'] * rna_pos.shape[0] + ['msi'] * msi_pos.shape[0]).copy()\n",
-    "mdata.obs['instance_id'] = mdata.obs.index\n",
-    "\n",
-    "mdata = TableModel.parse(mdata, region=['msi', 'rna'], region_key='region', instance_key='instance_id')\n",
-    "sdata = SpatialData(shapes={'msi':msi_locations, 'rna':rna_locations}, table=mdata)"
+    "msi_locations = ShapesModel.parse(msi_pos, geometry=0, radius=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try spatialdata with multiple anndatas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del msi.varm['PCs']"
    ]
   },
   {
@@ -128,98 +121,210 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre>MuData object with n_obs × n_vars = 6125 × 33823\n",
-       "  obs:\t&#x27;region&#x27;, &#x27;instance_id&#x27;\n",
-       "  uns:\t&#x27;spatialdata_attrs&#x27;\n",
-       "  2 modalities\n",
-       "    rna:\t3120 x 32285\n",
-       "      obs:\t&#x27;in_tissue&#x27;, &#x27;array_row&#x27;, &#x27;array_col&#x27;, &#x27;x&#x27;, &#x27;y&#x27;, &#x27;lesion&#x27;, &#x27;region&#x27;\n",
-       "      var:\t&#x27;gene_ids&#x27;, &#x27;feature_types&#x27;, &#x27;genome&#x27;\n",
-       "      uns:\t&#x27;spatial&#x27;\n",
-       "      obsm:\t&#x27;spatial&#x27;\n",
-       "    msi:\t3005 x 1538\n",
-       "      obs:\t&#x27;leiden&#x27;, &#x27;array_row&#x27;, &#x27;array_col&#x27;, &#x27;x&#x27;, &#x27;y&#x27;\n",
-       "      var:\t&#x27;mean&#x27;, &#x27;std&#x27;\n",
-       "      uns:\t&#x27;leiden_colors&#x27;, &#x27;spatial&#x27;\n",
-       "      obsm:\t&#x27;X_pca&#x27;, &#x27;spatial&#x27;\n",
-       "      varm:\t&#x27;PCs&#x27;\n",
-       "      obsp:\t&#x27;connectivities&#x27;, &#x27;distances&#x27;</pre>"
-      ],
-      "text/plain": [
-       "MuData object with n_obs × n_vars = 6125 × 33823\n",
-       "  obs:\t'region', 'instance_id'\n",
-       "  uns:\t'spatialdata_attrs'\n",
-       "  2 modalities\n",
-       "    rna:\t3120 x 32285\n",
-       "      obs:\t'in_tissue', 'array_row', 'array_col', 'x', 'y', 'lesion', 'region'\n",
-       "      var:\t'gene_ids', 'feature_types', 'genome'\n",
-       "      uns:\t'spatial'\n",
-       "      obsm:\t'spatial'\n",
-       "    msi:\t3005 x 1538\n",
-       "      obs:\t'leiden', 'array_row', 'array_col', 'x', 'y'\n",
-       "      var:\t'mean', 'std'\n",
-       "      uns:\t'leiden_colors', 'spatial'\n",
-       "      obsm:\t'X_pca', 'spatial'\n",
-       "      varm:\t'PCs'\n",
-       "      obsp:\t'connectivities', 'distances'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spatialdata/lib/python3.10/site-packages/anndata/_core/anndata.py:1900: UserWarning: Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n",
+      "  utils.warn_names_duplicates(\"var\")\n"
+     ]
     }
    ],
    "source": [
-    "sdata.table"
+    "adata = an.concat([rna, msi], join='outer', axis=1, label='modality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.var_names_make_unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs['region'] = (['msi'] * msi_pos.shape[0] + ['rna'] * rna_pos.shape[0]).copy()\n",
+    "adata.obs['instance_id'] = adata.obs.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>instance_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>msi</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>msi</td>\n",
+       "      <td>1001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>msi</td>\n",
+       "      <td>1002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>msi</td>\n",
+       "      <td>1003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>msi</td>\n",
+       "      <td>1004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTGTTCAGTGTGCTAC-1</th>\n",
+       "      <td>rna</td>\n",
+       "      <td>TTGTTCAGTGTGCTAC-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTGTTCTAGATACGCT-1</th>\n",
+       "      <td>rna</td>\n",
+       "      <td>TTGTTCTAGATACGCT-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTGTTGTGTGTCAAGA-1</th>\n",
+       "      <td>rna</td>\n",
+       "      <td>TTGTTGTGTGTCAAGA-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTGTTTCCATACAACT-1</th>\n",
+       "      <td>rna</td>\n",
+       "      <td>TTGTTTCCATACAACT-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTGTTTGTGTAAATTC-1</th>\n",
+       "      <td>rna</td>\n",
+       "      <td>TTGTTTGTGTAAATTC-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6125 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'msi':                          geometry  radius\n",
-       " 0      POINT (14461.525 5784.610)       1\n",
-       " 1      POINT (13883.064 5784.610)       1\n",
-       " 2      POINT (13304.603 5784.610)       1\n",
-       " 3      POINT (16196.908 6363.071)       1\n",
-       " 4      POINT (15618.447 6363.071)       1\n",
-       " ...                           ...     ...\n",
-       " 3000  POINT (31236.893 41649.191)       1\n",
-       " 3001  POINT (30658.432 41649.191)       1\n",
-       " 3002  POINT (30079.971 41649.191)       1\n",
-       " 3003  POINT (29501.510 41649.191)       1\n",
-       " 3004  POINT (28923.049 41649.191)       1\n",
-       " \n",
-       " [3005 rows x 2 columns],\n",
-       " 'rna':                          geometry  radius\n",
-       " 0     POINT (34740.000 30651.000)       1\n",
-       " 1      POINT (7784.000 27046.000)       1\n",
-       " 2     POINT (33275.000 36197.000)       1\n",
-       " 3     POINT (38516.000 28139.000)       1\n",
-       " 4     POINT (41113.000 32686.000)       1\n",
-       " ...                           ...     ...\n",
-       " 3115  POINT (23757.000 17504.000)       1\n",
-       " 3116   POINT (6074.000 15942.000)       1\n",
-       " 3117  POINT (27517.000 21045.000)       1\n",
-       " 3118  POINT (13000.000 28069.000)       1\n",
-       " 3119   POINT (20011.000 8917.000)       1\n",
-       " \n",
-       " [3120 rows x 2 columns]}"
+       "                   region         instance_id\n",
+       "1000                  msi                1000\n",
+       "1001                  msi                1001\n",
+       "1002                  msi                1002\n",
+       "1003                  msi                1003\n",
+       "1004                  msi                1004\n",
+       "...                   ...                 ...\n",
+       "TTGTTCAGTGTGCTAC-1    rna  TTGTTCAGTGTGCTAC-1\n",
+       "TTGTTCTAGATACGCT-1    rna  TTGTTCTAGATACGCT-1\n",
+       "TTGTTGTGTGTCAAGA-1    rna  TTGTTGTGTGTCAAGA-1\n",
+       "TTGTTTCCATACAACT-1    rna  TTGTTTCCATACAACT-1\n",
+       "TTGTTTGTGTAAATTC-1    rna  TTGTTTGTGTAAATTC-1\n",
+       "\n",
+       "[6125 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sdata.shapes"
+    "adata.obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spatialdata/lib/python3.10/site-packages/spatialdata/models/models.py:725: FutureWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, CategoricalDtype) instead\n",
+      "  if not is_categorical_dtype(adata.obs[region_key]):\n",
+      "/tmp/ipykernel_170010/1232050206.py:1: UserWarning: Converting `region_key: region` to categorical dtype.\n",
+      "  adata = TableModel.parse(adata, region=['msi', 'rna'], region_key='region', instance_key='instance_id')\n"
+     ]
+    }
+   ],
+   "source": [
+    "adata = TableModel.parse(adata, region=['msi', 'rna'], region_key='region', instance_key='instance_id')\n",
+    "sdata = SpatialData(shapes={'msi':msi_locations, 'rna':rna_locations},\n",
+    "                    table=adata,\n",
+    "                    # TODO: add images (need to read visium as sdata - would be easiest)\n",
+    "                    #                 images={\n",
+    "                    #     \"CytAssist_FFPE_Human_Breast_Cancer_full_image\": rna.uns['spatial'][key]['images']['hires']\n",
+    "                    # # },\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpatialData object with:\n",
+       "├── Shapes\n",
+       "│     ├── 'msi': GeoDataFrame shape: (3005, 2) (2D shapes)\n",
+       "│     └── 'rna': GeoDataFrame shape: (3120, 2) (2D shapes)\n",
+       "└── Table\n",
+       "      └── AnnData object with n_obs × n_vars = 6125 × 33823\n",
+       "    obs: 'region', 'instance_id'\n",
+       "    var: 'gene_ids', 'feature_types', 'genome', 'mean', 'std', 'modality'\n",
+       "    uns: 'spatialdata_attrs': AnnData (6125, 33823)\n",
+       "with coordinate systems:\n",
+       "▸ 'global', with elements:\n",
+       "        msi (Shapes), rna (Shapes)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdata"
    ]
   },
   {
@@ -228,6 +333,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TO BE CONTINUED whenever a way to work with such cases is standardized in SpatialData"
+   ]
   },
   {
    "cell_type": "code",
